@@ -1,3 +1,8 @@
+2002-03-13  Alan Modra  <amodra@bigpond.net.au>
+
+	* elflink.h (elf_bfd_final_link): Only call elf_link_input_bfd
+	when word size of input matches output word size.
+
 2002-03-12  Andreas Jaeger  <aj@suse.de>
 
 	* cpu-i386.c (i386_compatible): New.  Use it instead of
